--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <div class="calculator">
         <div class="result">0</div>
         <div class="buttons">
-            <button class="bg_gray button_c">C</button>
-            <button class="bg_orange">÷</button>
+            <button class="botao_roxo botao_c">C</button>
+            <button class="botao_roxo">÷</button>
 
-            <button class="bg_light_gray">7</button>
-            <button class="bg_light_gray">8</button>
-            <button class="bg_light_gray">9</button>
-            <button class="bg_orange">x</button>
+            <button class="botao_verde">7</button>
+            <button class="botao_verde">8</button>
+            <button class="botao_verde">9</button>
+            <button class="botao_roxo">x</button>
 
-            <button class="bg_light_gray">4</button>
-            <button class="bg_light_gray">5</button>
-            <button class="bg_light_gray">6</button>
-            <button class="bg_orange">-</button>
+            <button class="botao_verde">4</button>
+            <button class="botao_verde">5</button>
+            <button class="botao_verde">6</button>
+            <button class="botao_roxo">-</button>
 
-            <button class="bg_light_gray">1</button>
-            <button class="bg_light_gray">2</button>
-            <button class="bg_light_gray">3</button>
-            <button class="bg_orange">+</button>
+            <button class="botao_verde">1</button>
+            <button class="botao_verde">2</button>
+            <button class="botao_verde">3</button>
+            <button class="botao_roxo">+</button>
 
-            <button class="bg_light_gray button_zero">0</button>
-            <button class="bg_light_gray">,</button>
-            <button class="bg_orange">=</button>
+            <button class="botao_verde botao_zero">0</button>
+            <button class="botao_verde">,</button>
+            <button class="botao_roxo">=</button>
         </div>
     </div>
     <script src="./assets/scripts.js"></script>
